<resources>
    <string name="app_name">MyClock</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="play_sound">Play Sound</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="reset">Reset</string>
    <string name="zero">00</string>
    <string name="count">Count</string>
</resources>
