<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.li.myclock.MainActivity">

    <TabHost
        android:id="@+id/tabHost"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.example.li.myclock.AlarmView
                    android:id="@+id/tabAlarm"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ListView
                        android:id="@+id/lvAlarm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                    </ListView>

                    <Button
                        android:id="@+id/btnAddAlarm"
                        android:text="@string/add_alarm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.example.li.myclock.AlarmView>

                <com.example.li.myclock.CLockView
                    android:id="@+id/tabClock"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvTime"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:gravity="center"
                        />

                </com.example.li.myclock.CLockView>

                <com.example.li.myclock.StopwatchView
                    android:id="@+id/tabStopwatch"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/etHour"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:inputType="number"
                            android:maxLines="1"
                            android:text="0"
                            android:hint="@string/zero"/>

                        <TextView
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=":"/>

                        <EditText
                            android:id="@+id/etMinute"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:inputType="number"
                            android:maxLines="1"
                            android:text="0"
                            android:hint="@string/zero"/>

                        <TextView
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=":"/>

                        <EditText
                            android:id="@+id/etSecond"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:inputType="number"
                            android:maxLines="1"
                            android:text="0"
                            android:hint="@string/zero"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/btnGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btnStart"
                            android:text="@string/start"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"/>

                        <Button
                            android:id="@+id/btnPause"
                            android:text="@string/pause"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"/>

                        <Button
                            android:id="@+id/btnResume"
                            android:text="@string/resume"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"/>

                        <Button
                            android:id="@+id/btnReset"
                            android:text="@string/reset"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"/>

                    </LinearLayout>
                </com.example.li.myclock.StopwatchView>

                <com.example.li.myclock.TimeCounterView
                    android:id="@+id/tabTimeCounter"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvHour"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
                        <TextView
                            android:text=":"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
                        <TextView
                            android:id="@+id/tvMinute"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
                        <TextView
                            android:text=":"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
                        <TextView
                            android:id="@+id/tvSecond"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
                        <TextView
                            android:text="."
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
                        <TextView
                            android:id="@+id/tvMSecond"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
                    </LinearLayout>

                    <ListView
                        android:id="@+id/lvTimeCounter"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1">
                    </ListView>
                    
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btnStartTC"
                            android:text="@string/start"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"/>

                        <Button
                            android:id="@+id/btnPauseTC"
                            android:text="@string/pause"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"/>

                        <Button
                            android:id="@+id/btnResumeTC"
                            android:text="@string/resume"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"/>

                        <Button
                            android:id="@+id/btnCountTime"
                            android:text="@string/count"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"/>

                        <Button
                            android:id="@+id/btnResetTC"
                            android:text="@string/reset"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"/>
                    </LinearLayout>
                </com.example.li.myclock.TimeCounterView>
            </FrameLayout>
        </LinearLayout>
    </TabHost>
</RelativeLayout>